<resources>
    <string name="app_name">至上APP</string>

    <string name="home">首页</string>
    <string name="chat">聊天</string>
    <string name="find">发现</string>
    <string name="dream">Dream</string>
    <string name="mine">我的</string>

    <string name="mobile_number">手机号</string>
    <string name="message_auth_code">短信验证码</string>
    <string name="get">获取</string>
    <string name="login_now">立即登陆</string>
    <string name="mobile_password_login">用手机号 + 密码登录</string>
    <string name="mobile_message_login">用手机号 + 短信验证码登录或注册</string>
    <string name="new_user_register">新用户注册</string>
    <string name="square">广场</string>
    <string name="publish">发布</string>
    <string name="active_rule">活动规则</string>
    <string name="need_too">我也想要</string>
    <string name="dream_zan">为梦想点赞</string>
    <string name="phone_book">通讯录</string>
    <string name="nearby_people">附近的人</string>
    <string name="interact">互动</string>
    <string name="password">密码</string>
    <string name="phone_blank_tips">手机号码不能为空！</string>
    <string name="phone_error_tips">请输入正确的手机号码！</string>
    <string name="message_code_blank_tips">短信验证码不能为空！</string>
    <string name="password_blank_tips">密码不能为空！</string>
    <string name="zan_num">已收集 %s 赞</string>
    <string name="zan_target_num">目标 %s 赞</string>
    <string name="end_day">最后期限：%s</string>
    <string name="dream_title_input_tip">请输入Dream标题</string>
    <string name="dream_content_input_tip">请输入Dream描述内容</string>
    <string name="dream_money_input_tip">请输入Dream的价值</string>
    <string name="dream_pic_input_tip">请添加照片或视频内容</string>
    <string name="dream_time_input_tip">请选择期望日期</string>
    <string name="dream_share_content">至上app，记录每一个平凡人生的梦想征程，通过点赞鼓励激励圆梦人完成梦想，传递有梦最美，希望相随</string>

    <string name="pay_cancel_payment">您已取消付款</string>
    <string name="pay_failure_message">错误信息</string>
    <string name="pay_pay_failure">支付失败</string>
    <string name="pay_pay_failure_retry">支付失败，请重试</string>
    <string name="pay_result_in_confirm">支付结果确认中</string>
    <string name="pay_wx_no_install">微信未安装</string>
</resources>
