<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_45"
        android:background="@color/common_red"
        android:paddingLeft="@dimen/spacing_8"
        android:paddingRight="@dimen/spacing_10">

        <LinearLayout
            android:id="@+id/dreamSquareLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/spacing_30"
                android:layout_height="@dimen/spacing_30"
                android:layout_centerVertical="true"
                android:src="@drawable/dream_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/square"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/mineLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/spacing_20"
                android:layout_height="@dimen/spacing_20"
                android:src="@drawable/mine_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_3"
                android:text="@string/mine"
                android:textColor="@color/white"
                android:textSize="14sp" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/publishLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/spacing_10"
            android:layout_toLeftOf="@+id/mineLayout"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/spacing_20"
                android:layout_height="@dimen/spacing_20"
                android:src="@drawable/add_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_3"
                android:text="@string/publish"
                android:textColor="@color/white"
                android:textSize="14sp" />


        </LinearLayout>


    </RelativeLayout>

    <zs.com.supremeapp.widget.WidgetDragTopLayout
        android:id="@+id/dragLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <zs.com.supremeapp.widget.WidgetCycleViewPager
                    android:id="@+id/banner_viewpager"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginBottom="@dimen/spacing_10"
                    android:background="@color/white"
                    android:layout_alignParentStart="true" />

                <LinearLayout
                    android:id="@+id/indicatorLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="130dp"
                    android:gravity="center"
                    android:orientation="horizontal" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/titleRv"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_d0" />

            <!--<android.support.v7.widget.RecyclerView-->
                <!--android:id="@+id/recycleView"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"/>-->

            <ListView
                android:id="@+id/myListView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>


    </zs.com.supremeapp.widget.WidgetDragTopLayout>


</LinearLayout>