<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_45"
        android:background="@color/common_red"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingRight="@dimen/spacing_10">

        <LinearLayout
            android:id="@+id/backLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/spacing_8">

            <ImageView
                android:layout_width="@dimen/spacing_20"
                android:layout_height="@dimen/spacing_20"
                android:src="@drawable/back_white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="dream"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>


        <TextView
            android:id="@+id/activeRuleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/active_rule"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/shareImg"
            android:layout_width="@dimen/spacing_30"
            android:layout_height="@dimen/spacing_30"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/spacing_10"
            android:layout_toLeftOf="@+id/activeRuleTv"
            android:src="@drawable/share_white" />

        <ImageView
            android:layout_width="@dimen/spacing_30"
            android:layout_height="@dimen/spacing_30"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/spacing_10"
            android:layout_toLeftOf="@+id/shareImg"
            android:src="@drawable/btn_jubiao_white" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/spacing_10"
            android:paddingRight="@dimen/spacing_10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_15"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/dreamTitleTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="我不是要生"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_5"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="已收集 266 赞"
                            android:textColor="@color/red_09"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/spacing_20"
                            android:singleLine="true"
                            android:text="目标 200 赞"
                            android:textColor="@color/grey_7d"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/spacing_20"
                            android:singleLine="true"
                            android:text="最后期限：7月12日"
                            android:textColor="@color/grey_7d"
                            android:textSize="14sp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_10"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <zs.com.supremeapp.widget.CompletedView
                            android:id="@+id/completedView"
                            android:layout_width="@dimen/spacing_40"
                            android:layout_height="@dimen/spacing_40"
                            app:circleColor="@color/white"
                            app:radius="15dp"
                            app:ringBgColor="@color/grey_f1"
                            app:ringColor="@color/common_red"
                            app:strokeWidth="5dp" />

                        <ImageView
                            android:layout_width="@dimen/spacing_20"
                            android:layout_height="@dimen/spacing_20"
                            android:layout_centerInParent="true"
                            android:src="@drawable/dream_gray" />

                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_2"
                        android:singleLine="true"
                        android:text="25%"
                        android:textColor="@color/grey_7d"
                        android:textSize="12sp" />
                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/spacing_10"
                android:background="@color/grey_d0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/spacing_10"
                android:paddingTop="@dimen/spacing_10">


                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/headImg"
                    android:layout_width="@dimen/spacing_50"
                    android:layout_height="@dimen/spacing_50"
                    fresco:roundAsCircle="true" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_5"
                    android:layout_marginRight="@dimen/spacing_5"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/userNameTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/spacing_3"
                            android:text="催洗洗"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/spacing_5"
                            android:singleLine="true"
                            android:text="·实名认识服务者"
                            android:textColor="@color/grey_7d"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_3"
                        android:layout_marginTop="@dimen/spacing_5"
                        android:singleLine="true"
                        android:text="至上会计服务集团有限公司"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                </LinearLayout>

                <ImageView
                    android:layout_width="@dimen/spacing_35"
                    android:layout_height="@dimen/spacing_35"
                    android:src="@drawable/call_im" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_d0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_15"
                android:text="Dream详情"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/dreamContentTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_10"
                android:text="期待钱我道歉我的期望当前温度为球队前往地球为当前温度当前温度却无法千万富翁 v 我"
                android:textColor="@color/grey_7d"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="120dp"
                android:layout_height="@dimen/spacing_80"
                android:layout_marginTop="@dimen/spacing_10"
                android:src="@drawable/tangyan" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/spacing_10"
                android:background="@color/grey_d0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_15"
                android:text="谁支持过我"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <android.support.v7.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginTop="@dimen/spacing_10" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/spacing_10"
                android:background="@color/grey_d0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingTop="@dimen/spacing_5"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="评论"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <LinearLayout
                    android:id="@+id/commentLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/comment_red" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="评论一下"
                        android:textSize="12dp"
                        android:textColor="@color/common_red" />
                </LinearLayout>

            </LinearLayout>

            <zs.com.supremeapp.widget.NoScrollListView
                android:id="@+id/commentListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_15"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/spacing_15"
        android:paddingRight="@dimen/spacing_15">

        <TextView
            android:id="@+id/needTooTv"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/spacing_40"
            android:background="@drawable/bg_red_cor_5"
            android:gravity="center"
            android:paddingLeft="@dimen/spacing_15"
            android:paddingRight="@dimen/spacing_15"
            android:text="@string/need_too"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/zanLayout"
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_40"
            android:layout_marginLeft="@dimen/spacing_15"
            android:layout_weight="1"
            android:background="@drawable/bg_red_dark_cor_5"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/spacing_25"
                android:layout_height="@dimen/spacing_25"
                android:src="@drawable/dream_full_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dream_zan"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>